--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/reset.css">
@@ -7,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlanPeak</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+
 </html>
- 
